# Watermelon

./: CMakeLists.txt  README.md
include/: config.h  scoreboard.h
src/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  config.h  main.cpp  scoreboard.cpp  scoreboard.h
